--- a/Robin_Fungus_Email/Unity.CollabProxy.Editor.csproj
+++ b/Robin_Fungus_Email/Unity.CollabProxy.Editor.csproj
@@ -675,6 +675,10 @@
     <None Include="Assets\Fungus\Docs\README.txt" />
     <None Include="Assets\Fungus\Fonts\Amaranth\SIL Open Font License.txt" />
     <None Include="Assets\Fungus\Fonts\Exo2\OFL.txt" />
+    <None Include="Assets\Fungus\Fonts\Give_You_Glory\OFL.txt" />
+    <None Include="Assets\Fungus\Fonts\Nanum_Pen_Script\OFL.txt" />
+    <None Include="Assets\Fungus\Fonts\Reenie_Beanie\OFL.txt" />
+    <None Include="Assets\Fungus\Fonts\Sacramento\OFL.txt" />
     <None Include="Assets\Fungus\Integrations\Playmaker\ReadMe.txt" />
     <None Include="Assets\Fungus\Integrations\Spine\Readme.txt" />
     <None Include="Assets\Fungus\Scripts\link.xml" />
